Додав вікно Користувачі

--- a/Librarian/Librarian/MyForm.resx
+++ b/Librarian/Librarian/MyForm.resx
@@ -2275,4 +2275,7 @@
         8OvI8/8A4qXWl865ln/0eT7PnzNvzT/vJfPuTj97cfu/N+X90m3kAP/Z
 </value>
   </data>
+  <metadata name="notifyIcon1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>206, 17</value>
+  </metadata>
 </root>
